kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       # expose kao 80 da lakše rutiramo preko ingress-a
      targetPort: 5173
  type: ClusterIP
